# todo-list-service

./: pyproject.toml
migrations/: env.py
migrations/versions/: 5ecb2f503dc2_create_users_table.py
tests/: conftest.py  test_db.py  test_main.py
todo_list/: main.py
